--- a/research/prepare_base_model.ipynb
+++ b/research/prepare_base_model.ipynb
@@ -2,11 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'e:\\\\Github Project\\\\Kidney_Classification_CNN\\\\research'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "%pwd"
    ]
   },
   {
@@ -15,32 +37,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.chdir(\"../\")"
+    "os.chdir(\"../\")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'e:\\\\Github Project\\\\Kidney_Classification_CNN'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%pwd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,22 +59,22 @@
     "    params_learning_rate: float\n",
     "    params_include_top: bool\n",
     "    params_weights: str\n",
-    "    params_classes: int"
+    "    params_classes: int\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from cnnClassifier.constants import *\n",
+    "from cnnClassifier.utils.common import read_yaml, create_directories\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from cnnClassifier.constants import *\n",
-    "from cnnClassifier.utils.common import read_yaml ,create_directories"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,6 +88,9 @@
     "        self.params = read_yaml(params_filepath)\n",
     "\n",
     "        create_directories([self.config.artifacts_root])\n",
+    "\n",
+    "    \n",
+    "\n",
     "    def get_prepare_base_model_config(self) -> PrepareBaseModelConfig:\n",
     "        config = self.config.prepare_base_model\n",
     "        \n",
@@ -107,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +141,7 @@
     "        )\n",
     "\n",
     "        self.save_model(path=self.config.base_model_path, model=self.model)\n",
-    "    \n",
+    "\n",
     "    @staticmethod\n",
     "    def _prepare_full_model(model, classes, freeze_all, freeze_till, learning_rate):\n",
     "        if freeze_all:\n",
@@ -166,7 +171,6 @@
     "        full_model.summary()\n",
     "        return full_model\n",
     "    \n",
-    "    \n",
     "    def update_base_model(self):\n",
     "        self.full_model = self._prepare_full_model(\n",
     "            model=self.model,\n",
@@ -177,118 +181,84 @@
     "        )\n",
     "\n",
     "        self.save_model(path=self.config.updated_base_model_path, model=self.full_model)\n",
-    "    \n",
-    "    @staticmethod\n",
-    "    def _prepare_full_model(model, classes, freeze_all, freeze_till, learning_rate):\n",
-    "        if freeze_all:\n",
-    "            for layer in model.layers:\n",
-    "                model.trainable = False\n",
-    "        elif (freeze_till is not None) and (freeze_till > 0):\n",
-    "            for layer in model.layers[:-freeze_till]:\n",
-    "                model.trainable = False\n",
-    "\n",
-    "        flatten_in = tf.keras.layers.Flatten()(model.output)\n",
-    "        prediction = tf.keras.layers.Dense(\n",
-    "            units=classes,\n",
-    "            activation=\"softmax\"\n",
-    "        )(flatten_in)\n",
-    "\n",
-    "        full_model = tf.keras.models.Model(\n",
-    "            inputs=model.input,\n",
-    "            outputs=prediction\n",
-    "        )\n",
-    "\n",
-    "        full_model.compile(\n",
-    "            optimizer=tf.keras.optimizers.SGD(learning_rate=learning_rate),\n",
-    "            loss=tf.keras.losses.CategoricalCrossentropy(),\n",
-    "            metrics=[\"accuracy\"]\n",
-    "        )\n",
-    "\n",
-    "        full_model.summary()\n",
-    "        return full_model\n",
-    "\n",
-    "    def update_base_model(self):\n",
-    "        self.full_model = self._prepare_full_model(\n",
-    "            model=self.model,\n",
-    "            classes=self.config.params_classes,\n",
-    "            freeze_all=True,\n",
-    "            freeze_till=None,\n",
-    "            learning_rate=self.config.params_learning_rate\n",
-    "        )\n",
-    "\n",
-    "        self.save_model(path=self.config.updated_base_model_path, model=self.full_model)\n",
-    "\n",
-    "    \n",
-    "        \n",
     "    @staticmethod\n",
     "    def save_model(path: Path, model: tf.keras.Model):\n",
-    "        model.save(path)\n",
-    "\n",
-    "    \n",
-    "        \n",
-    "    \n",
-    "\n",
-    "    \n"
+    "        model.save(path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-09-24 12:46:51,537: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2024-09-24 12:46:51,541: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2024-09-24 12:46:51,544: INFO: common: created directory at: artifacts]\n"
+      "[2024-09-25 10:39:31,749: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2024-09-25 10:39:31,758: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2024-09-25 10:39:31,758: INFO: common: created directory at: artifacts]\n",
+      "[2024-09-25 10:39:31,766: INFO: common: created directory at: artifacts/prepare_base_model]\n"
      ]
     },
     {
-     "ename": "BoxKeyError",
-     "evalue": "\"'ConfigBox' object has no attribute 'prepare_base_model'\"",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "File \u001b[1;32mc:\\ProgramData\\miniconda3\\envs\\kidney\\lib\\site-packages\\box\\box.py:503\u001b[0m, in \u001b[0;36mbox.box.Box.__getitem__\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'prepare_base_model'",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[1;31mBoxKeyError\u001b[0m                               Traceback (most recent call last)",
-      "File \u001b[1;32mc:\\ProgramData\\miniconda3\\envs\\kidney\\lib\\site-packages\\box\\box.py:536\u001b[0m, in \u001b[0;36mbox.box.Box.__getattr__\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32mc:\\ProgramData\\miniconda3\\envs\\kidney\\lib\\site-packages\\box\\box.py:524\u001b[0m, in \u001b[0;36mbox.box.Box.__getitem__\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mBoxKeyError\u001b[0m: \"'prepare_base_model'\"",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "File \u001b[1;32mc:\\ProgramData\\miniconda3\\envs\\kidney\\lib\\site-packages\\box\\box.py:538\u001b[0m, in \u001b[0;36mbox.box.Box.__getattr__\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'ConfigBox' object has no attribute 'prepare_base_model'",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[1;31mBoxKeyError\u001b[0m                               Traceback (most recent call last)",
-      "File \u001b[1;32mc:\\ProgramData\\miniconda3\\envs\\kidney\\lib\\site-packages\\box\\config_box.py:28\u001b[0m, in \u001b[0;36mbox.config_box.ConfigBox.__getattr__\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32mc:\\ProgramData\\miniconda3\\envs\\kidney\\lib\\site-packages\\box\\box.py:552\u001b[0m, in \u001b[0;36mbox.box.Box.__getattr__\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mBoxKeyError\u001b[0m: \"'ConfigBox' object has no attribute 'prepare_base_model'\"",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "File \u001b[1;32mc:\\ProgramData\\miniconda3\\envs\\kidney\\lib\\site-packages\\box\\box.py:503\u001b[0m, in \u001b[0;36mbox.box.Box.__getitem__\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'prepare_base_model'",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[1;31mBoxKeyError\u001b[0m                               Traceback (most recent call last)",
-      "File \u001b[1;32mc:\\ProgramData\\miniconda3\\envs\\kidney\\lib\\site-packages\\box\\box.py:536\u001b[0m, in \u001b[0;36mbox.box.Box.__getattr__\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32mc:\\ProgramData\\miniconda3\\envs\\kidney\\lib\\site-packages\\box\\box.py:524\u001b[0m, in \u001b[0;36mbox.box.Box.__getitem__\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mBoxKeyError\u001b[0m: \"'prepare_base_model'\"",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "File \u001b[1;32mc:\\ProgramData\\miniconda3\\envs\\kidney\\lib\\site-packages\\box\\box.py:538\u001b[0m, in \u001b[0;36mbox.box.Box.__getattr__\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'ConfigBox' object has no attribute 'prepare_base_model'",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[1;31mBoxKeyError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[13], line 8\u001b[0m\n\u001b[0;32m      6\u001b[0m     prepare_base_model\u001b[38;5;241m.\u001b[39mupdate_base_model()\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[1;32m----> 8\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m e\n",
-      "Cell \u001b[1;32mIn[13], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m      2\u001b[0m     config \u001b[38;5;241m=\u001b[39m ConfigurationManager()\n\u001b[1;32m----> 3\u001b[0m     prepare_base_model_config \u001b[38;5;241m=\u001b[39m \u001b[43mconfig\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_prepare_base_model_config\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      4\u001b[0m     prepare_base_model \u001b[38;5;241m=\u001b[39m PrepareBaseModel(config\u001b[38;5;241m=\u001b[39mprepare_base_model_config)\n\u001b[0;32m      5\u001b[0m     prepare_base_model\u001b[38;5;241m.\u001b[39mget_base_model()\n",
-      "Cell \u001b[1;32mIn[7], line 12\u001b[0m, in \u001b[0;36mConfigurationManager.get_prepare_base_model_config\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mget_prepare_base_model_config\u001b[39m(\u001b[38;5;28mself\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m PrepareBaseModelConfig:\n\u001b[1;32m---> 12\u001b[0m     config \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconfig\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mprepare_base_model\u001b[49m\n\u001b[0;32m     14\u001b[0m     create_directories([config\u001b[38;5;241m.\u001b[39mroot_dir])\n\u001b[0;32m     16\u001b[0m     prepare_base_model_config \u001b[38;5;241m=\u001b[39m PrepareBaseModelConfig(\n\u001b[0;32m     17\u001b[0m         root_dir\u001b[38;5;241m=\u001b[39mPath(config\u001b[38;5;241m.\u001b[39mroot_dir),\n\u001b[0;32m     18\u001b[0m         base_model_path\u001b[38;5;241m=\u001b[39mPath(config\u001b[38;5;241m.\u001b[39mbase_model_path),\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     24\u001b[0m         params_classes\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mparams\u001b[38;5;241m.\u001b[39mCLASSES\n\u001b[0;32m     25\u001b[0m     )\n",
-      "File \u001b[1;32mc:\\ProgramData\\miniconda3\\envs\\kidney\\lib\\site-packages\\box\\config_box.py:30\u001b[0m, in \u001b[0;36mbox.config_box.ConfigBox.__getattr__\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32mc:\\ProgramData\\miniconda3\\envs\\kidney\\lib\\site-packages\\box\\box.py:552\u001b[0m, in \u001b[0;36mbox.box.Box.__getattr__\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mBoxKeyError\u001b[0m: \"'ConfigBox' object has no attribute 'prepare_base_model'\""
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading data from https://storage.googleapis.com/tensorflow/keras-applications/vgg16/vgg16_weights_tf_dim_ordering_tf_kernels_notop.h5\n",
+      "58889256/58889256 [==============================] - 96s 2us/step\n",
+      "[2024-09-25 10:41:09,771: WARNING: saving_utils: Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.]\n",
+      "Model: \"model\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " input_1 (InputLayer)        [(None, 224, 224, 3)]     0         \n",
+      "                                                                 \n",
+      " block1_conv1 (Conv2D)       (None, 224, 224, 64)      1792      \n",
+      "                                                                 \n",
+      " block1_conv2 (Conv2D)       (None, 224, 224, 64)      36928     \n",
+      "                                                                 \n",
+      " block1_pool (MaxPooling2D)  (None, 112, 112, 64)      0         \n",
+      "                                                                 \n",
+      " block2_conv1 (Conv2D)       (None, 112, 112, 128)     73856     \n",
+      "                                                                 \n",
+      " block2_conv2 (Conv2D)       (None, 112, 112, 128)     147584    \n",
+      "                                                                 \n",
+      " block2_pool (MaxPooling2D)  (None, 56, 56, 128)       0         \n",
+      "                                                                 \n",
+      " block3_conv1 (Conv2D)       (None, 56, 56, 256)       295168    \n",
+      "                                                                 \n",
+      " block3_conv2 (Conv2D)       (None, 56, 56, 256)       590080    \n",
+      "                                                                 \n",
+      " block3_conv3 (Conv2D)       (None, 56, 56, 256)       590080    \n",
+      "                                                                 \n",
+      " block3_pool (MaxPooling2D)  (None, 28, 28, 256)       0         \n",
+      "                                                                 \n",
+      " block4_conv1 (Conv2D)       (None, 28, 28, 512)       1180160   \n",
+      "                                                                 \n",
+      " block4_conv2 (Conv2D)       (None, 28, 28, 512)       2359808   \n",
+      "                                                                 \n",
+      " block4_conv3 (Conv2D)       (None, 28, 28, 512)       2359808   \n",
+      "                                                                 \n",
+      " block4_pool (MaxPooling2D)  (None, 14, 14, 512)       0         \n",
+      "                                                                 \n",
+      " block5_conv1 (Conv2D)       (None, 14, 14, 512)       2359808   \n",
+      "                                                                 \n",
+      " block5_conv2 (Conv2D)       (None, 14, 14, 512)       2359808   \n",
+      "                                                                 \n",
+      " block5_conv3 (Conv2D)       (None, 14, 14, 512)       2359808   \n",
+      "                                                                 \n",
+      " block5_pool (MaxPooling2D)  (None, 7, 7, 512)         0         \n",
+      "                                                                 \n",
+      " flatten (Flatten)           (None, 25088)             0         \n",
+      "                                                                 \n",
+      " dense (Dense)               (None, 2)                 50178     \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 14,764,866\n",
+      "Trainable params: 50,178\n",
+      "Non-trainable params: 14,714,688\n",
+      "_________________________________________________________________\n"
      ]
     }
    ],
